servicemesh/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: myapp
          image: quay.io/narendraprasadn/java:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
