servicemesh/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: myapp
