servicemesh/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: my-service-entry
spec:
  hosts:
    - '*'
  ports:
    - number: 80
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL
