servicemesh/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - myapp.apps.SUBDOMAIN
  gateways:
  - myapp-gateway
  http:
  - route:
    - destination:
        host: myapp
        subset: v1
        port:
          number: 8080
      weight: 80
    - destination:
        host: myapp
        subset: v2
        port:
          number: 8080
      weight: 20
